<resources>
    <string name="nano_technology">Firstly, learn concepts like ideality, most useful function(s), harmful effects, convolution,<br />\nneed for invention, the s-shaped curve in innovative design. trimming, miniaturization, etc.<br />\nwhile retaining the functional performance of technical systems (products and processes).<br />\nExamples from shown from all areas of engineering.<br />\nLearn how to build micro and nanomachines, conceptual embodiment design, use of<br />\ntools, safety precautions, use of creative innovation, psychological inertias.<br />\nDesign prototyping of Nano-LED lighted preset torque generating screwdriver for night<br />\nrepair. Transparent drill bit illuminates the needed area accurately. Extendable to surgical<br />\ninstruments as well.<br />\nDesign build portable, low-cost, folding 2D microscope with nano-LED for detecting<br />\nmalaria and other diseases through blood samples. Borosilicate ball acts as lens and<br />\ngravity-driven focusing mechanism. High-magnification. Originally a Stanford invention, it<br />\nhas been furthered and cost-cut by<strong> </strong><strong>Dr</strong><strong> Tunde Alowade, </strong><strong>PhD</strong><strong> (MIT), Co-founder, MIT<br />\nImpactLabs, d-lab fellow, MIT</strong><br />\nDesign and build a mole/acne friendly shaving razor with so many technical contradictions<br />\nresolved. Heated blades cut followed by cold soothing plate, both temperatures attained by<br />\nPetlier module. Nano-LED guides contours. Transparent tea-tree natural shaving oil<br />\nreplaces opaque foam/gel. Segmented and dynamized blades bypass acne/mole without<br />\ncut/bruise.</string>
    <string name="nano_technology_benefits">1. Certificate for attending the Workshop.<br />\n2. Certificate of Participation from Cognizance'18, IIT Roorkee.<br />\n3.Toolkit for a group of 5 participants.</string>
    <string name="nano_techonlogy_rules">Participants are expected to bring their own laptop (Mandatory) with internet connectivity (if possible).</string>
    <string name="fintech"><p>Not only India but the whole world, has experienced the emergence of numerous FinTech start-ups, accelerators and incubators over the last few years. India has everything going for it to establish itself as a global FinTech hub. With a large market of underserved/unserved customers, increasing mobile penetration, favourable demographics, an active start-up ecosystem and a large technology talent pool, India has a potential opportunity that is waiting to be seized in the FinTech space. </p>\n\n<p>Mr Abhishant Pant is a Fintech expert and has more than a decade of hands-on experience of payments landscape. Being enthusiastic about spreading awareness regarding Fintech Mr Pant will be hosting this 10 hrs workshop spread over 2 days, covering not only the concept of Fintech, but will also cover the building of startup brand on social media and the most talked concept of Blockchain.</p></string>
    <string name="fintech_beneftits">1. Certificate for attending the Workshop.<br />\n2. Certificate of Participation from Cognizance '18, IIT Roorkee.</string>
    <string name="fintech_rules">No special rules are applicable for this Workshop.</string>
    <string name="anonywriter"><p>Created in 2012, the brainchild of Abhijit Chakraborty, The Anonymous Writer is a digital platform which creates, curates and publishes various forms of written art. It is one of the biggest online writing platforms which now has 11,00,000 readers over its official website www.theanonymouswriter.com,</p></string>
    <string name="anonywriter_benefits"><ul>\n\t<li>It is an assured fact that the audience would have imbibed an idea and a love for fiction writing.</li>\n\t<li>A certificate of participation by The Anonymous Writer</li>\n</ul></string>
    <string name="anonywiter_rules">No special rules are applicable for this Workshop.</string>
    <string name="rekhta"><p>Designed to introduce Urdu Poetry to the uninitiated. It showcases Urdu Poetry as a highly creative Art form where condensed and layered language is the tool to create imagery, beauty and word associations to convey emotions and ideas, aesthetically, philosophically and musically.</p></string>
    <string name="rekhta_benefits"><p>This Workshop paves the way for <strong>holistic-enrichment</strong> and <strong>enhancement of creativity</strong> among the participants.</p></string>
    <string name="rekhta_rules">No special rules are applicable for this Workshop</string>
    <string name="cfd"><p>Computational Fluid Dynamics (CFD) is a tool with amazing flexibility, accuracy and breadth of application. But serious CFD, the kind that provides insights to help you optimize your designs, could be out of reach unless you choose your software carefully. To get serious CFD results, you need serious software. ANSYS CFD goes beyond qualitative results to deliver accurate quantitative predictions of fluid interactions and trade-offs. These insights reveal unexpected opportunities for your product opportunities that even experienced engineering analysts can otherwise miss.</p></string>
    <string name="cfd_benefits"><p>1. Certificate for attending the Workshop.</p>\n\n<p>2. Certificate of Participation from Cognizance 18, IIT Roorkee.</p></string>
    <string name="cfd_rules"><ul>\n\t<li>This is a 6 hours workshop on March 23, from 10:00 AM to 6:00 PM.</li>\n\t<li>Bring your laptops with Fluent installed in their system and it should be version 13.0 or higher.</li>\n</ul></string>
    <string name="ffr"><p>Fantastic Four Robotics is a two-day workshop in which the trainer would focus on introducing the participants to the world of Robotics. This workshop will take a total time of 16 hours, divided across 2 days. The workshop involves four different sessions in which the participants will be introduced to various concepts related to Robotics and Embedded Systems, DC Motors, Microcontroller, Arduino Boards, IDE Programming Bluetooth Module, Motor Drivers and many more practically.</p>\n\n<p>At the end of the workshop participants will be able to make their own Gesture controlled, Voice controlled, Bluetooth controlled, Touch Screen controlled and Andriod controlled Robots.</p></string>
    <string name="ffr_benefits"><p>1. Certificate for attending the Workshop.<br />\n2. Certificate of Participation from Cognizance 18, IIT Roorkee.<br />\n3. Toolkit to a group of 5 participants.</p></string>
    <string name="ffr_rules"><p><strong>Attendees should have Fluent installed in their system and it should be version 13.0 or higher. </strong></p></string>
    <string name="iot"><p>Internet of Things,or IOT in short, is the idea of making devices and objects smarter by linking them to the internet. This workshop introduces you to the amazing world of IOT and its fascinating applications. Using Arduino development kit, you will develop an electronic device that streams temperature and humidity data over the internet. You can program the system in such a way that say whenever the temperature exceeds a certain limit, the device will automatically send an email notification!</p></string>
    <string name="iot_benefits"><p>1. Certificate for attending the Workshop.<br />\n2. Certificate of Participation from Cognizance 18, IIT Roorkee.<br />\n3. Toolkit to a group of 5 participants.</p></string>
    <string name="iot_rules"><p>Participants are expected to bring a Laptop (min. 4 GB RAM) with internet connectivity (if possible) individually or in a group of maximum 5 members</p></string>
    <string name="embedded"><p>An embedded system is a computer system with a dedicated function within a larger mechanical or electrical system, often with real-time computing constraints. It is embedded as part of a complete device often including hardware and mechanical parts. Embedded systems control many devices in common use today. 98 percent of all microprocessors are manufactured as components of embedded systems.</p>\n\n<p>The Intel MCS-51 (commonly termed 8051) is an internally Harvard architecture, complex instruction set computing (CISC) instruction set, single chip microcontroller (C) series developed by Intel in 1980 for use in embedded systems. The 8051 architecture provides many functions (central processing unit (CPU), random access memory (RAM), read-only memory (ROM), input/output (I/O), interrupt logic, timer, etc.) in one package</p></string>
    <string name="embedded_benefits"><p>1. Certificate for attending the Workshop.<br />\n2. Certificate of Participation from Cognizance'18, IIT Roorkee.<br />\n3. Toolkit for a group of 5 participants.<br />\n4. Required software for the workshop.</p></string>
    <string name="embedded_rules"><p>Participants are expected to bring a Laptop individually or in group of maximum 5 members.</p></string>
    <string name="nav_one">Events</string>
    <string name="nav_two">Workshops</string>
    <string name="nav_three">Home</string>
    <string name="nav_four">Your Profile</string>
    <string name="nav_five">Schedule</string>
    <string name="spotlight_string">Spotlights</string>
    <string name="events_string">Events</string>
    <string name="workshops_string">Workshops</string>
    <string name="email">Your email</string>
    <string name="mobile_number">Mobile Number (an OTP will be sent to this)</string>
    <string name="full_name">Full Name</string>
    <string name="year">Year</string>
    <string name="state">State</string>
    <string name="college">College</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="branch">Branch</string>
    <string name="password">Password at least 8 characters</string>
    <string name="other_college">Other College</string>
    <string name="corresponding_address">Corresponding Address</string>
    <string name="room_no_hostel">Room No., Hostel</string>
    <string name="save">Save</string>
    <string name="menu_string">Menu</string>
    <string name="cognizance_all_caps">COGNIZANCE</string>
    <string name="cogni_tag_line">The Annual Technical Festival of IIT Roorkee</string>
    <string name="cogni_office_addr">Cognizance office,3rd floor, Multi Activity Center,\n IIT ROORKEE, Roorkee-247667,Haridwar, Uttrakhand</string>
    <string name="cogni_office_no">969816387899</string>
    <string name="about_us">About Us</string>
    <string name="sponsors">Sponsors</string>
    <string name="contact_us">Contact Us</string>
    <string name="login_moto">Lets embark on the journey towards technical excellence Together</string>
    <string name="email_string">Email</string>
    <string name="sign_up_string">Already have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_q">Login?</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
</resources>