<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_events"
        android:title="@string/nav_one"
        android:icon="@drawable/ic_event" />

    <item
        android:id="@+id/action_workshops"
        android:title="@string/nav_two"
        android:icon="@drawable/ic_exhibition" />

    <item
        android:id="@+id/action_home"
        android:title="@string/nav_three"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/action_spotlight"
        android:title="@string/nav_five"
        android:icon="@drawable/ic_spotlight" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/nav_four"
        android:icon="@mipmap/ic_launcher" />
</menu>
