<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="Home" />
        <item
            android:id="@+id/nav_workshops"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/workshops_string" />
        <item
            android:id="@+id/nav_events"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/events_string" />
        <item
            android:id="@+id/nav_spotlights"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/spotlight_string" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_launcher"
            android:title="Profile" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@mipmap/ic_launcher"
            android:title="Sign Out" />
    </group>

</menu>
