<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:paddingTop="32dp">

        <TextView
            android:id="@+id/sign_up_head_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_moto"
            android:textAlignment="center"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_rect"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorTextHint"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/mobile_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_rect"
            android:hint="@string/mobile"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorTextHint"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_rect"
            android:hint="@string/email_string"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_rect"
            android:hint="@string/password"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorTextHint"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/pink_rounded_rect"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_desc_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_string" />

            <TextView
                android:id="@+id/login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/login_q"
                android:textColor="@android:color/holo_green_light" />
        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>
