<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MoreActivity">

    <TextView
        android:id="@+id/menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/menu_string"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/nav_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/menu_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/menu_text" />

    <GridView
        android:id="@+id/nav_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnWidth="70dp"
        android:gravity="center"
        android:horizontalSpacing="1dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        app:layout_constraintBottom_toTopOf="@+id/divider_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_text"
        tools:listitem="@layout/item_nav_menu" />

    <View
        android:id="@+id/divider_view"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:background="@color/background_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_menu" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/cogni_logo"
        app:layout_constraintBottom_toBottomOf="@id/cogni_date_text"
        app:layout_constraintStart_toStartOf="@id/divider_view"
        app:layout_constraintTop_toTopOf="@id/divider_view" />

    <TextView
        android:id="@+id/cogni_date_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo"
        tools:text="23-25\nMarch\n2018" />

    <TextView
        android:id="@+id/cogni_all_caps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cognizance_all_caps"
        android:textColor="@color/logo_red"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/cogni_tag_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cogni_tag_line"
        android:textColor="@color/logo_red"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/cogni_all_caps" />

    <ImageView
        android:id="@+id/addr_pin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_pin"
        app:layout_constraintBottom_toBottomOf="@+id/helper"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toTopOf="@+id/addr_text" />

    <TextView
        android:id="@+id/addr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/cogni_office_addr"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/addr_pin"
        app:layout_constraintTop_toBottomOf="@id/cogni_tag_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cogni_office_no"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/addr_text"
        app:layout_constraintTop_toBottomOf="@id/addr_text" />

    <View
        android:id="@+id/helper"
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        app:layout_constraintBottom_toBottomOf="@id/addr_text"
        app:layout_constraintTop_toTopOf="@id/addr_text" />

    <TextView
        android:id="@+id/about_us_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_us"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/sponsors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_view" />

    <TextView
        android:id="@+id/sponsors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sponsors"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/contact_us"
        app:layout_constraintEnd_toEndOf="@id/about_us_text"
        app:layout_constraintTop_toBottomOf="@id/about_us_text" />

    <TextView
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/contact_us"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/divider_view"
        app:layout_constraintEnd_toEndOf="@id/about_us_text"
        app:layout_constraintTop_toBottomOf="@id/sponsors" />


</android.support.constraint.ConstraintLayout>